<resources>
    <string name="app_name">UMS Interface</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ums_device_tip">data source(a block device or an image file)</string>
    <string name="ums_config_path_tip">customize config path</string>
    <string name="ums_edit_hint">input or click the button to select</string>
    <string name="ums_select_btn_tip">select</string>
    <string name="ums_history_btn_tip">history</string>
    <string name="ums_search_btn_tip">search</string>
    <string name="ums_readonly_check_tip">readonly</string>
    <string name="ums_config_btn_tip">config usb gadget</string>
    <string name="mount_target_edit_tip">mount point (no /sdcard/...)</string>
    <string name="mount_loop_check_tip">loop</string>
    <string name="mount_mount_tip">mount</string>
    <string name="explorer_sort_way">sort way</string>
    <string name="explorer_set_home">set as home</string>
    <string name="explorer_close_tab">close tab</string>
    <string name="explorer_refresh">refresh</string>
    <string name="cancel">cancel</string>
    <string name="copy">copy</string>
    <string name="delete">delete</string>
    <string name="move">move</string>
    <string name="select_all">select all</string>
    <string name="ums_show_history">show history</string>
    <string name="ums_search_path">search config path</string>
    <string name="ums_reboot_kernel">reboot linux kernel</string>
    <string name="ums_reboot_recovery">reboot recovery</string>
    <string name="ums_reboot_fastboot">reboot fastboot</string>
    <string name="help">help</string>
    <string name="help_start">start to use</string>
    <string name="image_dir_tip">select the image directory</string>
    <string name="image_file_name_tip">input the image file name</string>
    <string name="image_size_tip">input the size of the image file(MB)</string>
    <string name="image_create">create image file</string>
    <string name="ums_cmd">execute command</string>

    <string name="mount_title">mount</string>
    <string name="mount_info_title">click the item to continue</string>
    <string name="mount_info_opera_title">chose an operation:</string>
    <string name="mount_info_opera_umount">unmount it</string>
    <string name="mount_info_opera_config">set it as mass storage device</string>
    <string name="mount_info_umount_warning">Are you really sure to unmount it? Android may crash ,if the system need it.</string>
    <string name="new_image_title">new image file</string>
    <string name="warning">warning</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="new_version_title">find new version:</string>
    <string name="update_ignore">ignore this version</string>
    <string name="update_download_title">downing loading update package</string>
    <string name="update_download_desc">UMS Interface update</string>
    <string name="check_update">check update</string>
    <string name="no_newer_version">no newer version available.</string>
    <string name="ok">ok</string>
    <string name="filesystem">file system</string>
    <string name="reboot">reboot</string>
    <string name="reboot_confirm">Are you sure to reboot?</string>
    <string name="ums_reboot_android">reboot android framework</string>
    <string name="deselect_loop_tip">The file you select seems like a block device,but \'loop\' is selected.Deselect \'loop\'?</string>
    <string name="select_loop_tip">The file you select doesn\'t like a block device, but \'loop\' is not selected.Select \'loop\'?</string>
    <string name="new_image_success_tip">Create image file success!Use it in quick start?</string>
    <string name="tip">tip</string>
    <string name="read">read</string>
    <string name="write">write</string>
    <string name="execute">execute</string>
    <string name="user">user</string>
    <string name="group">group</string>
    <string name="other">other</string>
    <string name="permission_tip"><![CDATA[dmask & fmask]]></string>
    <string name="mount_namespace_tip">make sure \'mount namespace separation\' is canceled</string>
    <string name="charset_tip">eliminate garbled</string>
    <string name="status">status</string>
    <string name="umsdev">It\'s a block device please  operate carefully !</string>
    <string name="reportfail">fail to create report</string>
    <string name="reportok">Done ,you can send it with your problems. It\'s located in</string>
    <string name="create_report">export log</string>
    <string name="quick_config">one key start</string>
    <string name="usb_connection">usb used</string>
    <string name="quick_create">quick create</string>
    <string name="image_size">image size</string>
    <string name="create">create</string>
    <string name="history">history</string>
    <string name="using">using</string>
    <string name="local_mount">mount to</string>
    <string name="start">start</string>
    <string name="close">close</string>
    <string name="end">end</string>
    <string name="no_using">nothing in use</string>
    <string name="refresh">refresh</string>
    <string name="quick_no_mount">no mounted</string>
    <string name="quick_no_usb">usb no used</string>
    <string name="image_no_find">file not exist</string>
    <string name="launch">launch</string>
    <string name="mount">mount</string>
    <string name="umount">umount</string>
    <string name="quick_searching">Getting status...</string>
    <string name="request_permission">request permission</string>
    <string name="permission_info">please agree the permission request</string>
    <string name="sort_mode">please choose a sort mode</string>
    <string name="muti_item">Multiple items</string>
    <string name="delete_warning">Sure to delete seleted items?</string>
    <string name="rename">rename</string>
    <string name="folder">folder</string>
    <string name="file">file</string>
    <string name="parent_dir">parent directory</string>
    <string name="send">send</string>
    <string name="name">name</string>
    <string name="root_label">root label</string>
    <string name="internal_storage_label">internal storage label</string>
    <string name="external_storage_label">external storage label</string>
    <string name="fail">fail</string>
    <string name="success">success</string>
    <string name="log_wait">Creating report, please wait...</string>
    <string name="open_as">open as</string>
    <string name="open_explorer">open explorer</string>
    <string name="exit">exit</string>
    <string name="ums_explorer">UExplorer</string>
    <string name="see">see</string>
    <string name="init_fail">init fail !</string>
    <string name="alloc">alloc</string>
    <string name="error">error</string>
    <string name="no_root_tip">root permission fail!</string>
    <string name="quick_extend_sd">extend sdcard</string>
    <!--<string name="text">text</string>-->
    <!--<string name="audio">audio</string>-->
    <!--<string name="video">video</string>-->
    <!--<string name="picture">picture</string>-->
    <!--<string name="help_en">*This program allows you to chose a block device or disk image as a 'disk',and communicate with PC through usb mass storage (just as usb disk do).-->
    <!--* Since the configuration of android phones are different, you should select the correct config path firstly,you can simply press 'SEARCH' button to find the path if available ,or specify it manually-->
    <!--* Root permission is needed, if you want to use mount function, busybox is needed too.-->
    <!--* There are some special usages. For example, you can select the whole emmc '/dev/block/mmcblk0' and mount it to pc linux, so that you can some tool like gparted to do something like partition."</string>-->


</resources>
