<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <!--<item android:id="@+id/action_mount_info"
        android:title="mount information"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_mount_info"
        app:showAsAction="always" />
    <item android:id="@+id/action_mount_add"
        android:title="mount file"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_mount_add"
        app:showAsAction="always" />
    <item android:id="@+id/action_new_image"
        android:title="create image file"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_image"
        app:showAsAction="always" />-->
    <item android:id="@+id/action_exec"
        android:title="@string/ums_cmd" />
    <!--<item android:id="@+id/action_file_history"-->
        <!--android:title="@string/ums_show_history"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
    <!--<item android:id="@+id/action_search_config"-->
        <!--android:title="@string/ums_search_path"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
    <item android:id="@+id/action_reboot_kernel"
        android:title="@string/ums_reboot_kernel" />
    <item android:id="@+id/action_reboot_android"
        android:title="@string/ums_reboot_android"/>
    <item android:id="@+id/action_reboot_recovery"
        android:title="@string/ums_reboot_recovery" />
    <item android:id="@+id/action_reboot_fastboot"
        android:title="@string/ums_reboot_fastboot" />
    <item android:id="@+id/action_check_update"
        android:title="@string/check_update"/>
    <item android:id="@+id/action_report"
        android:title="@string/create_report" />
    <item android:id="@+id/open_explorer"
        android:title="@string/open_explorer"/>
    <!--<item android:id="@+id/action_quick_config"-->
        <!--android:title="@string/quick_config"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
    <!--<item android:id="@+id/action_help"-->
        <!--android:title="@string/help"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
</menu>
