<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_select">

    <item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/select_menu_rename"
        android:title="@string/rename" />
    <item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/select_menu_open_as"
        android:title="@string/open_as" />
    <!--<item-->
        <!---->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_set_premission"-->
        <!--android:title="权限设定"/>-->
    <!--<item-->
        <!---->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_property"-->
        <!--android:title="属性"/>-->
    <!--item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/select_menu_add_tag"
        android:title="添加标签"/-->
    <item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/select_menu_send"
        android:title="@string/send"/>
    <!--<item-->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_open_as_text"-->
        <!--android:title="以文本方式打开"/>-->
    <!--<item-->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_zip"-->
        <!--android:title="压缩所选"/>-->
    <!--<item-->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_tar"-->
        <!--android:title="创建tar文件"/>-->
    <!--item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/select_menu_set_as_home"
        android:title="设为主文件夹"/-->
    <!--<item-->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_set_owner"-->
        <!--android:title="更改所有者"/>-->
    <!--item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/select_menu_set_se"
        android:title="更改se上下文"/-->
    <!--<item-->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_home_shortcut"-->
        <!--android:title="创建主页快捷方式"/>-->
    <!--<item-->
        <!--app:showAsAction="never"-->
        <!--android:orderInCategory="100"-->
        <!--android:id="@+id/select_menu_link"-->
        <!--android:title="创建链接"/>-->
    <item
        app:showAsAction="always"
        android:orderInCategory="100"
        android:id="@+id/select_menu_back"
        android:icon="@mipmap/abc_ic_ab_back_mtrl_am_alpha"
        android:title="@string/cancel"/>
    <item
        app:showAsAction="always"
        android:orderInCategory="100"
        android:id="@+id/select_menu_count"
        app:actionViewClass="android.widget.TextView"
        android:title="count"/>
    <item
        app:showAsAction="always"
        android:orderInCategory="100"
        android:id="@+id/select_menu_copy"
        android:icon="@mipmap/abc_ic_menu_copy_mtrl_am_alpha"
        android:title="@string/copy"/>
    <item
        app:showAsAction="always"
        android:orderInCategory="100"
        android:id="@+id/select_menu_delete"
        android:icon="@mipmap/ic_delete_white_24dp"
        android:title="@string/delete"/>

    <item
        app:showAsAction="always"
        android:orderInCategory="100"
        android:id="@+id/select_menu_cut"
        android:icon="@mipmap/abc_ic_menu_cut_mtrl_alpha"
        android:title="@string/move"/>
    <item
        app:showAsAction="always"
        android:orderInCategory="100"
        android:id="@+id/select_menu_select_all"
        android:icon="@mipmap/abc_ic_menu_selectall_mtrl_alpha"
        android:title="@string/select_all"/>

</menu>