<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_mount_activitry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjj.echo.umsinterface.MountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/image_dir_tip"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/image_dir_edit"
                android:hint="@string/ums_edit_hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="/sdcard"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/image_dir_btn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ums_select_btn_tip"
                    />
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/image_file_name_tip"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:gravity="right"
            >
            <EditText
                android:id="@+id/image_file_edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/image_size_tip"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:gravity="right"
            >
            <EditText
                android:id="@+id/image_size_edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/image_create"
            android:id="@+id/image_create"/>
    </LinearLayout>
</RelativeLayout>
