<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_mount_activitry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjj.echo.umsinterface.MountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/ums_device_tip"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/mount_dev_edit"
                android:hint="@string/ums_edit_hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/mount_dev_btn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/ums_select_btn_tip"
                    />
                <!--<Button-->
                    <!--android:id="@+id/source_history_btn"-->
                    <!--android:layout_width="80dp"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:gravity="center"-->
                    <!--android:text="history"-->
                    <!--/>-->
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/mount_target_edit_tip"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingLeft="3dp"
            android:gravity="right"
            >
            <EditText
                android:id="@+id/mount_target_edit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/ums_edit_hint"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/mount_target_btn"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/ums_select_btn_tip"/>
                <!--<Button-->
                    <!--android:id="@+id/config_search_btn"-->
                    <!--android:layout_width="80dp"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:gravity="center"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:text="search"/>-->
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <CheckBox
                android:id="@+id/mount_readonly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/ums_readonly_check_tip"/>
            <CheckBox
                android:id="@+id/mount_loop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/mount_loop_check_tip"/>
            <Spinner
                android:paddingRight="0dp"
                android:paddingTop="4dp"
                android:layout_width="100dp"
                android:paddingLeft="4dp"
                android:drawSelectorOnTop="true"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:id="@+id/mount_file_system_spinner">

            </Spinner>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/mount_mount_tip"
            android:id="@+id/mount_btn"/>
    </LinearLayout>
</RelativeLayout>
