<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/quick_status"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_insert_drive_file_white_48dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quick_use_group"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/quick_use"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:text="@string/quick_searching"
                    android:textSize="25sp" />
                <ImageView
                    android:id="@+id/refresh_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:background="@mipmap/ic_refresh_white_36dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/quick_use_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:singleLine="true"
                android:ellipsize="marquee"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_usb_white_36dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:id="@+id/quick_usb_text"
                    android:layout_weight="1"
                    android:text="@string/quick_no_usb"/>
                <Button
                    android:id="@+id/quick_usb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:visibility="invisible"
                    android:background="@android:drawable/button_onoff_indicator_on"
                    android:gravity="center"
                    android:layout_gravity="right|center_vertical"
                    android:text="start"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_save_white_36dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/quick_mount_txt"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:ellipsize="marquee"
                    android:layout_weight="1"
                    android:text="@string/quick_no_mount"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:id="@+id/quick_mount_btn"
                    android:visibility="invisible"
                    android:background="@android:drawable/button_onoff_indicator_on"
                    android:gravity="center"
                    android:layout_gravity="right|center_vertical"
                    android:text="start"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#91b648"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launch_white_48dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:ellipsize="end"
                android:textSize="30sp"
                android:text="@string/quick_create"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/white"
                    android:text="@string/image_size"/>
                <EditText
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="50"
                    android:id="@+id/quick_create_size"
                    android:inputType="number"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:text="M"/>


            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:gravity="center"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/quick_create_btn"
            android:text="@string/create"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#92a94d"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@mipmap/ic_history_white_36dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="35sp"
                android:textColor="@android:color/white"
                android:text="@string/history"/>
        </LinearLayout>
            <ListView
                android:id="@+id/quick_history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null">

            </ListView>
    </LinearLayout>
</LinearLayout>
